--- a/src/index.html
+++ b/src/index.html
@@ -7,11 +7,11 @@
 <html>
 
 <head>
-  <title>Generic - Alpha by HTML5 UP</title>
+  <title>Membros</title>
   <meta charset="utf-8" />
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-  <link rel="stylesheet" href="./assets/css/main.css" />
+  <link rel="stylesheet" href="/assets/css/main.css" />
 </head>
 
 <body class="is-preload">
